testing_workspace/mem_add_data/gcc.txt
mem_add_data/mem_add.c: In function ‘main’:
mem_add_data/mem_add.c:8:3: warning: implicit declaration of function ‘asm’ [-Wimplicit-function-declaration]
    8 |   asm (
      |   ^~~
mem_add_data/mem_add.c:10:26: error: expected ‘)’ before ‘:’ token
   10 |       "mov %0, %%rax\n\t"                 // Load address in rax
      |                          ^
      |                          )
......
   21 |       :                               // Outputs
      |       ~                   
mem_add_data/mem_add.c:25:5: warning: implicit declaration of function ‘usleep’; did you mean ‘sleep’? [-Wimplicit-function-declaration]
   25 |     usleep(200000);  // 0.1 s
      |     ^~~~~~
      |     sleep
